# Raytracing-Programs

./: .clang-format  .gitignore  .gitmodules  README.md
C/: Makefile  README.md  benchmark.sh  objects.c  objects.h  out.ppm  out.txt  out2.ppm  parse.c  parse.h  ppm.c  ppm.h  raycast.c  raycast.h  v3math.c  v3math.h
C/examples/: example1.scene
CUDA/: Makefile  README.md  benchmark.sh  objects.cu  objects.h  out.ppm  out.txt  ppm.cu  ppm.h  raycast.cu  raycast.h  raytrace
CUDA/examples/: example3.scene  quadric1.scene
FinalProject-main/cs530_7_kdl222_jmk478/: Makefile  out.ppm  out.txt  parse.cu  parse.h  raycast.cu  raycast.h  raytrace  v3math.cu  v3math.h
FinalProject-main/cs530_7_kdl222_jmk478/examples/: example1.scene  example2.scene  quadric2.scene
Optix/: CMakeLists.txt  benchmark.sh  optix7.h  out.txt  tutorial.cu
Optix/CMake/: cuda_compile_and_embed.cmake  nvcuda_compile_ptx.cmake
Optix/src/: CMakeLists.txt  cuda_defs.h  deviceCode.cu  deviceCode.h  hostCode.cpp  hostCode.cu  objects.cpp  objects.h  parse.cpp  parse.h  ppm.cpp  ppm.h  raycast.cu  v3math.cu  v3math.h
Optix/tutorial/: CMakeLists.txt  LaunchParams.h  Makefile  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp  ppm.cu  ppm.h
examples/: example1.scene  reflection.scene  reflection_no_plane.scene  simple.scene
